# setsuna

./: .clang-format  .gitignore  CMakeLists.txt  README.md  doxyconf  doxyconf-mcss
applications/: CMakeLists.txt
applications/bootstrap/: CMakeLists.txt  app_glfw.cpp
applications/bootstrap/include/setsuna_app/: app_glfw.h
applications/simple/: CMakeLists.txt  main.cpp  simple_culler.cpp  simple_culler.h
cmake/modules/: FindGLFW.cmake  FindGLM.cmake  FindStbi.cmake
doc/: namespaces.dox
setsuna_core/: CMakeLists.txt  camera.cpp  color.cpp  frustum.cpp  logger.cpp  object3d.cpp  transform.cpp  update_visitor.cpp
setsuna_core/include/setsuna/: aabb.h  camera.h  color.h  frustum.h  logger.h  object3d.h  plane.h  rtti.h  rtti_prefix.h  shared_queue.h  sphere.h  transform.h  update_visitor.h  visitor.h
setsuna_core/include/setsuna/math/: aabb.h  color.h  common.h  frustum.h  matrix.h  plane.h  quaternion.h  sphere.h  transform.h  vector.h
setsuna_loaders/: CMakeLists.txt  texture_loader.cpp
setsuna_loaders/include/setsuna_loaders/: texture_loader.h
src/: CMakeLists.txt  camera.cpp  framebuffer.cpp  frustum.cpp  geometry.cpp  logger.cpp  material.cpp  material_instance.cpp  mesh.cpp  mesh_renderer.cpp  object3d.cpp  resource.cpp  resource_manager.cpp  shader_program.cpp  texture.cpp  texture_container.cpp  texture_manager.cpp  update_visitor.cpp
src/include/setsuna/: aabb.h  buffer.h  camera.h  color.h  component.h  framebuffer.h  frustum.h  geometry.h  loader.h  logger.h  material.h  material_instance.h  mesh.h  mesh_filter.h  mesh_renderer.h  object3d.h  plane.h  ref.h  resource.h  resource_manager.h  rtti.h  rtti_prefix.h  shader_program.h  sphere.h  texture.h  texture_container.h  texture_manager.h  texture_property.h  transform.h  visitor.h
